# personal-rag-copilot

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FRD.md  Makefile  PRD.md  README.md  TAD.md  app.py  audit_report.md  codex_sandbox_audit.py  codex_sandbox_report-20250907-142405.md  conftest.py  coverage_targets.md  docker-compose.yml  future_gpu_support-tiger-lake-up3.md  interface_specs.md  mypy.ini  project_architecture_diagram.md  pyproject.toml  pyrightconfig.json  report.json  requirements.txt  risk_assessment.md  test_automation_strategy.md  test_cases.md  test_plan.md  warnings_report.md
.ai/artifacts/diagnostics/: manifest.json
.ai/artifacts/diagnostics/js/: junit.xml
.ai/artifacts/diagnostics/pyright/: report.json  summary.md
.ai/artifacts/diagnostics/pytest/: junit.xml  session.txt  warnings.md
.ai/artifacts/summaries/: today.md
.github/workflows/: ci.yml
config/: default_settings.yaml
control/: backlog.yaml  sprint.yaml  state.json
docs/: gpu_support.md
reports/pyright/: after-test-pragmas.txt  baseline.output.json  baseline.output.txt  pyright-report.json  pyright-stats.txt  pyright-summary.md
requirements/: base.in  base.txt  constraints.in  constraints.txt  gpu-cu12.in  gpu-cu12.txt
src/: query_service.py
src/config/: __init__.py  backup.py  dependency_check.py  models.py  runtime_config.py  settings.py  validate.py
src/evaluation/: ragas_integration.py  recommendations.py
src/integrations/: huggingface_models.py  pinecone_client.py
src/monitoring/: auto_tuner.py  performance.py
src/ranking/: reranker.py  rrf_fusion.py
src/retrieval/: dense.py  hybrid.py  lexical.py  pinecone_sparse.py  query_analysis.py
src/services/: __init__.py  document_service.py  index_management.py  llm_service.py
src/ui/: __init__.py  chat.py  evaluate.py  ingest.py  navbar.py  settings.py
src/ui/components/: __init__.py  badges.py  ranking_controls.py  transparency.py
src/utils/: hardware.py
tests/: conftest.py  test_app.py  test_query_service.py
tests/test_config/: test_backup.py  test_runtime_config.py  test_runtime_config_errors.py  test_settings.py  test_validate.py
tests/test_evaluation/: test_audit_source.py  test_ragas_integration.py  test_recommendations.py
tests/test_integrations/: test_huggingface_models.py  test_pinecone_client.py
tests/test_monitoring/: test_auto_tuner.py  test_performance.py  test_policy_management.py  test_tracker_dashboard.py
tests/test_ranking/: test_reranker.py  test_rrf.py
tests/test_retrieval/: conftest.py  test_dense.py  test_hybrid.py  test_hybrid_rerank.py  test_lexical.py  test_query_analysis.py  test_smoke_integration.py
tests/test_services/: test_document_service.py  test_index_management.py
tests/test_ui/: test_badge_corrections.py  test_chat.py  test_evaluate.py  test_gradio_integration.py  test_ingest.py  test_ingest_queue.py  test_performance_indicator.py  test_ranking_controls.py  test_response_generation.py  test_settings_performance.py  test_settings_pinecone.py  test_transparency.py
tests/test_utils/: test_hardware.py  test_timezone_handling.py
tools/ci/: collect_diagnostics.sh  detect_test_stack.py  pyright_json_to_md.py  pytest_to_warnings_md.py
typings/gradio/: __init__.pyi
typings/openvino/: __init__.pyi
typings/pinecone/: __init__.pyi
typings/ragas/: __init__.pyi
typings/ragas/metrics/: __init__.pyi
typings/rank_bm25/: __init__.pyi
typings/transformers/: __init__.pyi
