 # pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel", "pip-tools>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-rag-copilot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gradio>=5.0.0",
    "sentence-transformers>=2.2.2",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.2",
    "pinecone-client>=2.2.0",
    "ragas>=0.1.0",
    "datasets>=2.14.0",
    "pypdf>=3.16.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "plotly==6.3.0",
    "nltk>=3.8.0",
    "pydantic>=2.4.0",
    "typing-extensions>=4.8.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "pyright>=1.1.405",
    "fpdf2>=2.7.0",
    "httpx>=0.25.0",
]
gpu-cu12 = [
    "torch>=2.0.0; sys_platform == 'linux'",
    "nvidia-cublas-cu12>=12.8.4.1; sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12>=12.8.90; sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12>=12.8.93; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12>=12.8.90; sys_platform == 'linux'",
    "nvidia-cudnn-cu12>=9.10.2.21; sys_platform == 'linux'",
    "nvidia-cufft-cu12>=11.3.3.83; sys_platform == 'linux'",
    "nvidia-cufile-cu12>=1.13.1.3; sys_platform == 'linux'",
    "nvidia-curand-cu12>=10.3.9.90; sys_platform == 'linux'",
    "nvidia-cusolver-cu12>=11.7.3.90; sys_platform == 'linux'",
    "nvidia-cusparse-cu12>=12.5.8.93; sys_platform == 'linux'",
    "nvidia-cusparselt-cu12>=0.7.1; sys_platform == 'linux'",
    "nvidia-nccl-cu12>=2.27.3; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12>=12.8.93; sys_platform == 'linux'",
    "nvidia-nvtx-cu12>=12.8.90; sys_platform == 'linux'",
    "triton>=3.4.0; sys_platform == 'linux'",
]

[tool.black]
line-length = 90
target-version = ["py312"]  # adjust to your floor; optional

[tool.ruff]
target-version = "py312"
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E402", "E501"]

[tool.flake8]               # Flake8 ≥ 7.0 supports pyproject
max-line-length = 90
# If you use flake8-bugbear, choose ONE of the two strategies below:

# Strategy A (simplest): rely on E501 with max-line-length=90
# (do nothing else)

# Strategy B (bugbear-style soft limit at 90):
# extend-select = ["B950"]
# extend-ignore = ["E501"]
